account-data/Reishi-Narisada/us-west-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-26541b54",
                    "NetworkAclId": "acl-c78ccfa1",
                    "SubnetId": "subnet-b04f0998"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3181f34d",
                    "NetworkAclId": "acl-c78ccfa1",
                    "SubnetId": "subnet-b825c1f0"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3081f34c",
                    "NetworkAclId": "acl-c78ccfa1",
                    "SubnetId": "subnet-caeb29ac"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3781f34b",
                    "NetworkAclId": "acl-c78ccfa1",
                    "SubnetId": "subnet-89bd22d2"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-c78ccfa1",
            "OwnerId": "416817624313",
            "Tags": [],
            "VpcId": "vpc-1e299978"
        }
    ]
}
