account-data/Reishi-Narisada/us-west-2/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-8ec937f6",
                    "RouteTableId": "rtb-78a5ac1e"
                }
            ],
            "OwnerId": "416817624313",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-78a5ac1e",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-4f98fd28",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-1e299978"
        }
    ]
}
